update tests / project to java 17